--- a/backend/package.json
+++ b/backend/package.json
@@ -4,18 +4,19 @@
     "description": "",
     "main": "server.js",
     "scripts": {
-      "test": "echo \"Error: no test specified\" && exit 1",
-      "start": "node server.js"
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "node server.js"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "dependencies": {
-      "axios": "^1.5.1",
-      "dotenv": "^16.3.1",
-      "express": "^4.18.2",
-      "mongodb": "^6.1.0",
-      "mongoose": "^7.5.3",
-      "nodemon": "^3.0.1"
+        "axios": "^1.5.1",
+        "cors": "^2.8.5",
+        "dotenv": "^16.3.1",
+        "express": "^4.18.2",
+        "mongodb": "^6.1.0",
+        "mongoose": "^7.5.3",
+        "nodemon": "^3.0.1"
     }
-  }
+}
