--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,7 +37,8 @@
 		"react-table": "7.7.0",
 		"react-tagsinput": "3.19.0",
 		"stylis": "^4.0.13",
-		"stylis-plugin-rtl": "^2.1.1"
+		"stylis-plugin-rtl": "^2.1.1",
+		"yup": "^1.3.2"
 	},
 	"resolutions": {
 		"react-error-overlay": "6.0.11"
