Add Formik library for form management

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
 		"apexcharts": "^3.27.3",
 		"axios": "^1.5.1",
 		"classnames": "2.3.1",
+		"formik": "^2.4.5",
 		"framer-motion": "^4.1.17",
 		"match-sorter": "6.3.0",
 		"moment": "2.29.1",
