download & display medicine image

--- a/backend/package.json
+++ b/backend/package.json
@@ -48,6 +48,7 @@
     "get-intrinsic": "^1.2.1",
     "git": "^0.1.5",
     "glob-parent": "^5.1.2",
+    "gridfs-stream": "^1.1.1",
     "has": "^1.0.4",
     "has-flag": "^3.0.0",
     "has-proto": "^1.0.1",
@@ -81,6 +82,7 @@
     "mpath": "^0.9.0",
     "mquery": "^5.0.0",
     "ms": "^2.0.0",
+    "multer-gridfs-storage": "^5.0.2",
     "negotiator": "^0.6.3",
     "node": "^20.7.0",
     "node-bin-setup": "^1.1.3",
