--- a/backend/package.json
+++ b/backend/package.json
@@ -86,11 +86,13 @@
     "negotiator": "^0.6.3",
     "node": "^20.7.0",
     "node-bin-setup": "^1.1.3",
+    "nodemailer": "^6.9.7",
     "nodemon": "^3.0.1",
     "nopt": "^1.0.10",
     "normalize-path": "^3.0.0",
     "object-inspect": "^1.12.3",
     "on-finished": "^2.4.1",
+    "otp-generator": "^4.0.1",
     "parseurl": "^1.3.3",
     "path-to-regexp": "^0.1.7",
     "picomatch": "^2.3.1",
