change start script to use cross-env for the mac people

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "apexcharts": "^3.27.3",
     "axios": "^1.5.1",
     "classnames": "2.3.1",
+    "cross-env": "^7.0.3",
     "formik": "^2.4.5",
     "framer-motion": "^4.1.17",
     "match-sorter": "6.3.0",
@@ -46,7 +47,7 @@
     "react-error-overlay": "6.0.11"
   },
   "scripts": {
-    "start": "set PORT=4000 && react-scripts start",
+    "start": "cross-env PORT=4000 && react-scripts start",
     "build": "react-scripts build && gulp licenses",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
