--- a/frontend/package.json
+++ b/frontend/package.json
@@ -47,7 +47,7 @@
     "react-error-overlay": "6.0.11"
   },
   "scripts": {
-    "start": "cross-env PORT=4000 && react-scripts start",
+    "start": "cross-env PORT=4000 react-scripts start",
     "build": "react-scripts build && gulp licenses",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
