--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.5.1",
     "classnames": "2.3.1",
     "cross-env": "^7.0.3",
+    "downshift": "^8.2.3",
     "formik": "^2.4.5",
     "framer-motion": "^4.1.17",
     "match-sorter": "6.3.0",
