--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "react": "16.14.0",
     "react-apexcharts": "^1.3.9",
     "react-big-calendar": "0.33.2",
+    "react-bootstrap-icons": "^1.10.3",
     "react-bootstrap-sweetalert": "5.2.0",
     "react-datetime": "3.1.1",
     "react-dom": "16.14.0",
