--- a/backend/package.json
+++ b/backend/package.json
@@ -115,6 +115,7 @@
     "sift": "^16.0.1",
     "simple-update-notifier": "^2.0.0",
     "smart-buffer": "^4.2.0",
+    "socket.io": "^4.7.2",
     "socks": "^2.7.1",
     "sparse-bitfield": "^3.0.3",
     "statuses": "^2.0.1",
