--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,6 +40,7 @@
     "react-swipeable-views": "0.14.0",
     "react-table": "7.7.0",
     "react-tagsinput": "3.19.0",
+    "socket.io-client": "^4.7.2",
     "stripe": "^14.4.0",
     "stylis": "^4.0.13",
     "stylis-plugin-rtl": "^2.1.1",
